--- a/app/src/donations.html
+++ b/app/src/donations.html
@@ -142,14 +142,12 @@
             });
 
             socket.on("toggle background", function (data) {
-                if (!backgroundTransparent) {
+                if (data) {
                     document.body.style.backgroundColor = "transparent";
                     document.getElementById("overlay_title").classList.add("hide");
-                    backgroundTransparent = true;
                 } else {
                     document.body.style.backgroundColor = "#31f8ff";
                     document.getElementById("overlay_title").classList.remove("hide");
-                    backgroundTransparent = false;
                 }
             });
 
