--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,65 @@
         <title>Caffeinated</title>
         <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.0/lib/anime.min.js"></script>
         <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+        <style>
+            /* https://tobiasahlin.com/spinkit/ */
+            .spinner {
+                margin: 100px auto 0;
+                width: 70px;
+                text-align: center;
+                bottom: 60px;
+                position: fixed;
+                transform: translateX(-50%);
+                left: 50%;
+            }
+
+            .spinner div {
+                width: 18px;
+                height: 18px;
+                border-radius: 100%;
+                display: inline-block;
+                -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+                animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+            }
+
+            .spinner .bounce1 {
+                -webkit-animation-delay: -0.32s;
+                animation-delay: -0.32s;
+            }
+
+            .spinner .bounce2 {
+                -webkit-animation-delay: -0.16s;
+                animation-delay: -0.16s;
+            }
+
+            @-webkit-keyframes sk-bouncedelay {
+
+                0%,
+                80%,
+                100% {
+                    -webkit-transform: scale(0)
+                }
+
+                40% {
+                    -webkit-transform: scale(1.0)
+                }
+            }
+
+            @keyframes sk-bouncedelay {
+
+                0%,
+                80%,
+                100% {
+                    -webkit-transform: scale(0);
+                    transform: scale(0);
+                }
+
+                40% {
+                    -webkit-transform: scale(1.0);
+                    transform: scale(1.0);
+                }
+            }
+        </style>
     </head>
 
     <body>
@@ -32,7 +91,9 @@
                 </ul>
             </aside>
             <div class="pages">
-                <div class="content page" page="settings" id="settings"></div>
+                <div class="content page" page="settings" id="settings">
+                    <span class="settings-version"></span>
+                </div>
                 <div class="content page" page="overlays" id="overlays"></div>
             </div>
         </div>
@@ -45,6 +106,11 @@
         <div id="splash" style="opacity: 1;">
             <img src="media/app_icon.png" class="app-icon" />
             <img src="media/caffeinated.png" class="caffeinated-logo" />
+            <div class="spinner">
+                <div class="bounce1"></div>
+                <div class="bounce2"></div>
+                <div class="bounce3"></div>
+            </div>
             <span class="problems" style="opacity: 0;">
                 Having problems?
                 <a onclick="openLink('https:\/\/twitter.com/casterlabs');">
@@ -64,10 +130,53 @@
         <script src="js/navigate.js"></script>
         <script src="js/modules.js"></script>
         <script src="js/caffeinated.js"></script>
-        <script src="js/defaultmodules.js"></script>
+        <div id="scripts"></div>
         <script>
-            navigate("overlays");
-            CAFFEINATED.init();
+            const REPOS = ["https://caffeinated.casterlabs.co", "http://127.0.0.1:8092/caffeinatedtestrepo"];
+            let REPO_SCRIPTS = [];
+
+            (async function () {
+                // TODO better method, this works but is ugly.
+                for (let repo of REPOS) {
+                    try {
+                        await fetch(repo + "/modules.json")
+                            .then((response) => response.json())
+                            .then((modules) => {
+                                if (modules.for.includes(VERSION)) {
+                                    modules.overlays.forEach((overlay) => {
+                                        let script = document.createElement("script");
+
+                                        script.src = repo + "/" + overlay;
+                                        script.setAttribute("repo", modiles.name);
+
+                                        REPO_SCRIPTS.push(script);
+                                    });
+                                } else {
+                                    console.error("Unable to fetch repo config.json");
+                                }
+                            });
+                    } catch (e) {
+                        console.error("Unable to fetch " + repo + " config.json");
+                    }
+                };
+
+                for (let script of REPO_SCRIPTS) {
+                    await waitForScript(script);
+                }
+
+                console.log("All scripts added.");
+
+                navigate("overlays");
+                CAFFEINATED.init();
+            })();
+
+            function waitForScript(script) {
+                return new Promise((resolve) => {
+                    script.addEventListener("load", () => resolve());
+                    document.querySelector("#scripts").appendChild(script);
+                });
+            }
+
         </script>
     </footer>
 
