--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css" />
@@ -40,20 +39,18 @@
             }
 
             @-webkit-keyframes sk-bouncedelay {
-
                 0%,
                 80%,
                 100% {
-                    -webkit-transform: scale(0)
+                    -webkit-transform: scale(0);
                 }
 
                 40% {
-                    -webkit-transform: scale(1.0)
+                    -webkit-transform: scale(1);
                 }
             }
 
             @keyframes sk-bouncedelay {
-
                 0%,
                 80%,
                 100% {
@@ -62,8 +59,8 @@
                 }
 
                 40% {
-                    -webkit-transform: scale(1.0);
-                    transform: scale(1.0);
+                    -webkit-transform: scale(1);
+                    transform: scale(1);
                 }
             }
         </style>
@@ -147,18 +144,20 @@
                                         let script = document.createElement("script");
 
                                         script.src = repo + "/" + overlay;
-                                        script.setAttribute("repo", modiles.name);
+                                        script.setAttribute("repo", modules.name);
 
                                         REPO_SCRIPTS.push(script);
                                     });
                                 } else {
-                                    console.error("Unable to fetch repo config.json");
+                                    console.error("Repo " + repo + " doesn't support " + VERSION + ", supported versions:");
+                                    console.error(modules.for);
                                 }
                             });
                     } catch (e) {
-                        console.error("Unable to fetch " + repo + " config.json");
+                        console.error("Unable to fetch " + repo + " modules.json");
+                        console.error(e);
                     }
-                };
+                }
 
                 for (let script of REPO_SCRIPTS) {
                     await waitForScript(script);
@@ -176,8 +175,6 @@
                     document.querySelector("#scripts").appendChild(script);
                 });
             }
-
         </script>
     </footer>
-
 </html>
