--- a/overlays/donation.html
+++ b/overlays/donation.html
@@ -20,7 +20,15 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                width: 20%;
+                width: 30%;
+            }
+
+            video {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 30%;
+                transform: translate(0px, -100%);
             }
         </style>
         <title>Caffeinated Donations</title>
@@ -31,7 +39,8 @@
 
     <body>
         <h1 class="center" id="event" style="opacity: 0;">
-            <img src="" id="image" />
+            <img class="image" src="" id="image" />
+            <video class="image" src="" id="video"></video>
             <span id="user"></span>
             <br />
             <span id="text"></span>
@@ -43,6 +52,10 @@
             const overlay = new OverlayUtil("casterlabs_donation");
             const DISPLAY_TIME = 10 * 1000;
             const FADE_TIME = 1000;
+            const video = document.querySelector("#video");
+            const user = document.querySelector("#user");
+            const img = document.querySelector("#image");
+            const text = document.querySelector("#text");
             let config = null;
             let files = {};
             let audio = {};
@@ -81,13 +94,17 @@
 
             async function render() {
                 let event = queue[0];
-                let user = document.querySelector("#user");
-                let img = document.querySelector("#image");
-                let text = document.querySelector("#text");
 
                 if (config.use_custom_image) {
                     if (files.image_file) {
-                        img.src = files.image_file;
+                        if (files.image_file.startsWith("data:video")) {
+                            video.src = files.image_file;
+                            img.src = "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
+                            video.play();
+                        } else {
+                            img.src = files.image_file;
+                            video.src = "";
+                        }
                     } else {
                         img.src = "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
                     }
