--- a/overlays/follower.html
+++ b/overlays/follower.html
@@ -20,7 +20,15 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                width: 20%;
+                width: 30%;
+            }
+
+            video {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 30%;
+                transform: translate(0px, -100%);
             }
         </style>
         <title>Caffeinated Followers</title>
@@ -31,10 +39,11 @@
 
     <body>
         <h1 class="center" id="event" style="opacity: 0;">
-            <img src="" id="image" />
+            <img class="image" src="" id="image" />
+            <video class="image" src="" id="video"></video>
             <span id="user"></span>
             <span id="text">
-                &nbsp;followed.
+                followed
             </span>
         </h1>
     </body>
@@ -44,6 +53,10 @@
             const overlay = new OverlayUtil("casterlabs_follower");
             const DISPLAY_TIME = 10 * 1000;
             const FADE_TIME = 1000;
+            const video = document.querySelector("#video");
+            const user = document.querySelector("#user");
+            const img = document.querySelector("#image");
+            const text = document.querySelector("#text");
             let config = null;
             let files = {};
             let audio = {};
@@ -82,18 +95,22 @@
 
             async function render() {
                 let event = queue[0];
-                let user = document.querySelector("#user");
-                let img = document.querySelector("#image");
-                let text = document.querySelector("#text");
 
                 if (config.use_custom_image) {
                     if (files.image_file) {
-                        img.src = files.image_file;
+                        if (files.image_file.startsWith("data:video")) {
+                            video.src = files.image_file;
+                            img.src = "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
+                            video.play();
+                        } else {
+                            img.src = files.image_file;
+                            video.src = "";
+                        }
                     } else {
                         img.src = "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
                     }
                 } else {
-                    img.src = "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
+                    img.src = event.image;
                 }
 
                 user.innerText = event.follower.username;
