Add nocache option, add some text containers to the donation and follower overlays for custom css

--- a/overlays/donation.html
+++ b/overlays/donation.html
@@ -41,9 +41,11 @@
         <h1 class="center" id="event" style="opacity: 0;">
             <img class="image" src="" id="image" />
             <video class="image" src="" id="video"></video>
-            <span id="user"></span>
-            <br />
-            <span id="text"></span>
+            <div class="text-container">
+                <span id="user"></span>
+                <br />
+                <span id="text"></span>
+            </div>
         </h1>
     </body>
 
