--- a/overlays/follower.html
+++ b/overlays/follower.html
@@ -41,10 +41,12 @@
         <h1 class="center" id="event" style="opacity: 0;">
             <img class="image" src="" id="image" />
             <video class="image" src="" id="video"></video>
-            <span id="user"></span>
-            <span id="text">
-                followed
-            </span>
+            <div class="text-container">
+                <span id="user"></span>
+                <span id="text">
+                    followed
+                </span>
+            </div>
         </h1>
     </body>
 
