--- a/overlays/donation.html
+++ b/overlays/donation.html
@@ -20,15 +20,20 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                width: 30%;
+                max-height: 50vh;
+                max-width: 90vw;
             }
 
             video {
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                width: 30%;
-                transform: translate(0px, -100%);
+                max-height: 50vh;
+                max-width: 90vw;
+            }
+
+            .hide {
+                display: none;
             }
         </style>
         <title>Caffeinated Donations</title>
@@ -39,8 +44,8 @@
 
     <body>
         <h1 class="center" id="event" style="opacity: 0;">
-            <img class="image" src="" id="image" />
-            <video class="image" src="" id="video"></video>
+            <img src="" id="image" />
+            <video src="" id="video"></video>
             <div class="text-container">
                 <span id="user"></span>
                 <br />
@@ -89,23 +94,27 @@
             });
 
             function updateRenderer() {
-                let text = document.querySelector("#text");
-
                 text.style = "color: " + config.text_color + ";";
             }
 
             async function render() {
+                let displayTime = DISPLAY_TIME;
                 let event = queue[0];
 
-                if (config.use_custom_image) {
+                if (!config.use_donation_image) {
                     if (files.image_file) {
                         if (files.image_file.startsWith("data:video")) {
                             video.src = files.image_file;
-                            img.src = "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
                             video.play();
+                            video.classList = "";
+                            video.addEventListener("loadeddata", () => {
+                                displayTime = video.duration * 1000;
+                            });
+                            img.classList = "hide";
                         } else {
+                            video.classList = "hide";
+                            img.classList = "";
                             img.src = files.image_file;
-                            video.src = "";
                         }
                     } else {
                         img.src = "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
@@ -123,13 +132,15 @@
                     playAudio();
                 }
 
+                displayTime -= (FADE_TIME * 2);
+
                 anime({
                     targets: "#event",
                     easing: "linear",
                     opacity: 1,
                     duration: FADE_TIME
                 }).finished.then(async function () {
-                    await sleep(DISPLAY_TIME);
+                    await sleep(displayTime);
 
                     anime({
                         targets: "#event",
