--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
                 margin: 100px auto 0;
                 width: 70px;
                 text-align: center;
-                bottom: 60px;
+                bottom: 100px;
                 position: fixed;
                 transform: translateX(-50%);
                 left: 50%;
@@ -120,12 +120,16 @@
             <span class="reconnecting" style="opacity: 0;">
                 Reconnecting to Koi.
             </span>
+            <span class="loading-fonts" style="opacity: 0;">
+                Loading fonts.
+            </span>
         </div>
     </body>
 
     <footer>
         <script src="js/util.js"></script>
         <script src="js/forms.js"></script>
+        <script src="js/fontselect.js"></script>
         <script src="js/koi.js"></script>
         <script src="js/navigate.js"></script>
         <script src="js/modules.js"></script>
